--- a/Android/NewsReader/app/src/main/res/layout/topic_homescreen_activity.xml
+++ b/Android/NewsReader/app/src/main/res/layout/topic_homescreen_activity.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
     </LinearLayout>
