--- a/Android/NewsReader/app/src/main/res/layout/topic_homescreen_activity.xml
+++ b/Android/NewsReader/app/src/main/res/layout/topic_homescreen_activity.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="mmilord.newsreader.pages.article_hub.TopicHomeScreenActivity">
+    tools:context="mmilord.newsreader.views.article_hub.TopicHomeScreenActivity">
 
 
 
