--- a/iOS/NewsReader/NewsReader/Base.lproj/Main.storyboard
+++ b/iOS/NewsReader/NewsReader/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Bca-XP-6ym">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Bca-XP-6ym">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
@@ -139,11 +139,11 @@
                         <viewControllerLayoutGuide type="bottom" id="SB7-FT-3mV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="13h-os-xkd">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceHorizontal="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wvb-bO-UpV" customClass="ArticleScrollerCollectionView">
-                                <rect key="frame" x="0.0" y="363" width="375" height="180"/>
+                                <rect key="frame" x="0.0" y="427" width="375" height="180"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.40316195101351349" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="180" id="X4c-8h-5b3"/>
@@ -184,7 +184,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8qP-bk-1aw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-282.5" y="478.5"/>
+            <point key="canvasLocation" x="429.5" y="240.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tgO-v0-9gJ">
@@ -196,12 +196,22 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="d9R-Yi-ShC" kind="relationship" relationship="rootViewController" id="WgX-aC-zR2"/>
+                        <segue destination="ya0-we-ubj" kind="relationship" relationship="rootViewController" id="DgJ-5T-LEk"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zN7-VS-7nu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-796.5" y="478.5"/>
+            <point key="canvasLocation" x="-1156.5" y="472.5"/>
+        </scene>
+        <!--Topic Page View Controller-->
+        <scene sceneID="oEM-lp-H0B">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ya0-we-ubj" customClass="TopicPageViewController" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="9C2-eG-Tqz"/>
+                </pageViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VLp-4P-iX9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-544" y="463"/>
         </scene>
         <!--News Category-->
         <scene sceneID="TDR-dg-act">
